--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,8 @@ dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:26.8.0')
     implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.google.firebase:firebase-auth:20.0.3'
+    implementation 'com.google.firebase:firebase-auth:20.0.4'
+    implementation 'com.google.firebase:firebase-core:18.0.3'
     implementation 'com.google.firebase:firebase-database:19.7.0'
 
 
